// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Svelte <=4 syntax > component file has correct contents 1`] = `
"<script>
  /** @type {import(\\"@prismicio/client\\").Content.QuxQuuxSlice} */
  export let slice;
</script>

<section
  data-slice-type={slice.slice_type}
  data-slice-variation={slice.variation}
>
  Placeholder component for {slice.slice_type} (variation: {slice.variation})
  slices.
  <br />
  <strong>You can edit this slice directly in your code editor.</strong>
  <!--
	💡 Use the Prismic MCP server with your code editor
	📚 Docs: https://prismic.io/docs/ai#code-with-prismics-mcp-server
	-->
</section>
"
`;

exports[`Svelte <=4 syntax > component file is correctly typed when TypeScript is enabled 1`] = `
"<script lang=\\"ts\\">
  import type { Content } from \\"@prismicio/client\\";

  export let slice: Content.QuxQuuxSlice;
</script>

<section
  data-slice-type={slice.slice_type}
  data-slice-variation={slice.variation}
>
  Placeholder component for {slice.slice_type} (variation: {slice.variation})
  slices.
  <br />
  <strong>You can edit this slice directly in your code editor.</strong>
  <!--
	💡 Use the Prismic MCP server with your code editor
	📚 Docs: https://prismic.io/docs/ai#code-with-prismics-mcp-server
	-->
</section>
"
`;

exports[`component file has correct contents 1`] = `
"<script>
  /* @typedef {import(\\"@prismicio/client\\").Content} Content */
  /* @typedef {import(\\"@prismicio/svelte\\").SliceComponentProps} SliceComponentProps */

  /* @type {SliceComponentProps<Content.QuxQuuxSlice>} */
  const { slice } = $props();
</script>

<section
  data-slice-type={slice.slice_type}
  data-slice-variation={slice.variation}
>
  Placeholder component for {slice.slice_type} (variation: {slice.variation})
  slices.
  <br />
  <strong>You can edit this slice directly in your code editor.</strong>
  <!--
	💡 Use the Prismic MCP server with your code editor
	📚 Docs: https://prismic.io/docs/ai#code-with-prismics-mcp-server
	-->
</section>
"
`;

exports[`component file is correctly typed when TypeScript is enabled 1`] = `
"<script lang=\\"ts\\">
  import type { Content } from \\"@prismicio/client\\";
  import type { SliceComponentProps } from \\"@prismicio/svelte\\";

  type Props = SliceComponentProps<Content.QuxQuuxSlice>;

  const { slice }: Props = $props();
</script>

<section
  data-slice-type={slice.slice_type}
  data-slice-variation={slice.variation}
>
  Placeholder component for {slice.slice_type} (variation: {slice.variation})
  slices.
  <br />
  <strong>You can edit this slice directly in your code editor.</strong>
  <!--
	💡 Use the Prismic MCP server with your code editor
	📚 Docs: https://prismic.io/docs/ai#code-with-prismics-mcp-server
	-->
</section>
"
`;
